--- a/src/app/components/publications/publications.html
+++ b/src/app/components/publications/publications.html
@@ -7,7 +7,7 @@
   @for (publication of publications; track $index) {
 
     <!-- wrapper for title + card -->
-    <div class="flex flex-col items-center mb-10">
+    <div class="flex flex-col items-center mb-10 hover:cursor-pointer">
       <publication-card-component
         [publicationCartInfo]="publication"
         [routerLink]="['/publications', publication.id]"
