--- a/src/app/components/navbar-component/navbar-component.html
+++ b/src/app/components/navbar-component/navbar-component.html
@@ -13,9 +13,9 @@
       </div>
 
       <div class="hidden md:flex md:items-center md:space-x-6">
-        <a routerLink="/home" class="text-lg oswald-regular hover:text-gray-300">Solutions</a>
-        <a routerLink="/products" class="text-lg oswald-regular hover:text-gray-300">Research</a>
-        <a routerLink="/pricing" class="text-lg oswald-regular hover:text-gray-300">Writeups</a>
+        <a routerLink="/solutions" class="text-lg oswald-regular hover:text-gray-300">Solutions</a>
+        <a routerLink="/research" class="text-lg oswald-regular hover:text-gray-300">Research</a>
+        <a routerLink="/writeups" class="text-lg oswald-regular hover:text-gray-300">Writeups</a>
         <a routerLink="/about" class="text-lg oswald-regular hover:text-gray-300">About</a>
       </div>
 
@@ -44,9 +44,9 @@
   <div [class.hidden]="!mobileOpen" class="md:hidden bg-black/95 border-t border-white/5">
 
     <div class="px-4 pt-4 pb-6 space-y-3">
-      <a class="block px-3 py-2 rounded-md text-lg oswald-regular hover:text-gray-300" routerLink="/home">Solutions</a>
-      <a class="block px-3 py-2 rounded-md text-lg oswald-regular hover:text-gray-300" routerLink="/products">Research</a>
-      <a class="block px-3 py-2 rounded-md text-lg oswald-regular hover:text-gray-300" routerLink="/pricing">Writeups</a>
+      <a class="block px-3 py-2 rounded-md text-lg oswald-regular hover:text-gray-300" routerLink="/solutions">Solutions</a>
+      <a class="block px-3 py-2 rounded-md text-lg oswald-regular hover:text-gray-300" routerLink="/research">Research</a>
+      <a class="block px-3 py-2 rounded-md text-lg oswald-regular hover:text-gray-300" routerLink="/writeups">Writeups</a>
       <a class="block px-3 py-2 rounded-md text-lg oswald-regular hover:text-gray-300" routerLink="/about">About</a>
     </div>
 
