no publications messages and size adjusting

--- a/src/app/components/navbar-component/navbar-component.html
+++ b/src/app/components/navbar-component/navbar-component.html
@@ -44,10 +44,10 @@
   <div [class.hidden]="!mobileOpen" class="md:hidden bg-black/95 border-t border-white/5">
 
     <div class="px-4 pt-4 pb-6 space-y-3">
-      <a class="block px-3 py-2 rounded-md text-lg oswald-regular hover:text-gray-300" routerLink="/solutions">Solutions</a>
-      <a class="block px-3 py-2 rounded-md text-lg oswald-regular hover:text-gray-300" routerLink="/research">Research</a>
-      <a class="block px-3 py-2 rounded-md text-lg oswald-regular hover:text-gray-300" routerLink="/writeups">Writeups</a>
-      <a class="block px-3 py-2 rounded-md text-lg oswald-regular hover:text-gray-300" routerLink="/about">About</a>
+      <a class="block px-3 py-2 rounded-md border border-white/10 text-lg oswald-regular hover:text-gray-300" routerLink="/solutions">Solutions</a>
+      <a class="block px-3 py-2 rounded-md border border-white/10 text-lg oswald-regular hover:text-gray-300" routerLink="/research">Research</a>
+      <a class="block px-3 py-2 rounded-md border border-white/10 text-lg oswald-regular hover:text-gray-300" routerLink="/writeups">Writeups</a>
+      <a class="block px-3 py-2 rounded-md border border-white/10 text-lg oswald-regular hover:text-gray-300" routerLink="/about">About</a>
     </div>
 
   </div>
