--- a/src/app/components/blog-app.html
+++ b/src/app/components/blog-app.html
@@ -1,7 +1,5 @@
 <navbar-component></navbar-component>
-<div class="min-h-screen flex justify-center">
-  <div class="flex justify-around w-full">
-    <user-component></user-component>
-    <router-outlet></router-outlet>
-  </div>
+<div class="flex flex-col md:flex-row justify-center gap-8 md:gap-44">
+  <user-component></user-component>
+  <router-outlet></router-outlet>
 </div>
