--- a/src/app/components/publications/publications.html
+++ b/src/app/components/publications/publications.html
@@ -4,16 +4,21 @@
     All publications
   </h1>
 
-  @for (publication of publications; track $index) {
-
-    <!-- wrapper for title + card -->
-    <div class="flex flex-col items-center mb-10 hover:cursor-pointer">
-      <publication-card-component
-        [publicationCartInfo]="publication"
-        [routerLink]="['/publications', publication.id]"
-        [state]="{publication: publication}">
-      ></publication-card-component>
+  @if (publications?.length === 0) {
+    <div class="lato-bold flex flex-col items-center mt-10 mb-10">
+      <div class="text-gray-500 text-lg font-semibold">
+        No publications available at this time.
+      </div>
     </div>
+  } @else {
+    @for (publication of publications; track $index) {
+      <div class="flex flex-col items-center mb-10 hover:cursor-pointer">
+        <publication-card-component
+          [publicationCartInfo]="publication"
+          [routerLink]="['/publications', publication.id]"
+          [state]="{publication: publication}"></publication-card-component>
+      </div>
+    }
   }
 
 </div>
