--- a/src/app/components/research/research.html
+++ b/src/app/components/research/research.html
@@ -1,1 +1,25 @@
-<p>research works!</p>
+<div class="research-container">
+
+  <h1 class="archivo-black-regular text-4xl text-center mt-12 mb-8">
+    Research
+  </h1>
+
+  @if (research?.length === 0) {
+    <div class="lato-bold flex flex-col items-center mt-10 mb-10">
+      <div class="text-gray-500 text-lg font-semibold">
+        No research publications available at this time.
+      </div>
+    </div>
+  } @else {
+    @for (publication of research; track $index) {
+      <div class="flex flex-col items-center mb-10 hover:cursor-pointer">
+        <publication-card-component
+          [publicationCartInfo]="publication"
+          [routerLink]="['/research', publication.id]"
+          [state]="{publication: publication}">
+        ></publication-card-component>
+      </div>
+    }
+  }
+
+</div>
