--- a/src/app/components/solutions/solutions.html
+++ b/src/app/components/solutions/solutions.html
@@ -1,18 +1,25 @@
 <div class="solution-container">
-aa
-  @for (publication of solutions; track $index) {
 
-    <!-- wrapper for title + card -->
-    <div class="flex flex-col items-center mb-10">
-      <h1 class="archivo-black-regular text-4xl text-center mt-12 mb-8">
-        Solutions
-      </h1>
+  <h1 class="archivo-black-regular text-4xl text-center mt-12 mb-8">
+    Solutions
+  </h1>
 
-      <publication-card-component
-        [publicationCartInfo]="publication"
-      ></publication-card-component>
+  @if (!solutions || solutions.length === 0) {
+    <div class="lato-bold flex flex-col items-center mt-10 mb-10">
+      <div class="text-gray-500 text-lg font-semibold">
+        No solutions publications available at this time.
+      </div>
     </div>
-
+  } @else {
+    @for (publication of solutions; track $index) {
+      <div class="flex flex-col items-center mb-10 hover:cursor-pointer">
+        <publication-card-component
+          [publicationCartInfo]="publication"
+          [routerLink]="['/publications', publication.id]"
+          [state]="{publication: publication}">
+        ></publication-card-component>
+      </div>
+    }
   }
 
 </div>
