--- a/src/app/components/blog-app.html
+++ b/src/app/components/blog-app.html
@@ -1,5 +1,8 @@
-<navbar-component></navbar-component>
-<div class="flex flex-col md:flex-row justify-center gap-8 md:gap-44">
-  <user-component></user-component>
-  <router-outlet></router-outlet>
+<div class="flex flex-col min-h-screen">
+  <navbar-component></navbar-component>
+  <div class="flex flex-col md:flex-row justify-center gap-8 md:gap-44 flex-1">
+    <user-component></user-component>
+    <router-outlet></router-outlet>
+  </div>
+  <footer class="mt-auto"></footer>
 </div>
