--- a/src/app/components/publications/publications.html
+++ b/src/app/components/publications/publications.html
@@ -16,7 +16,8 @@
         <publication-card-component
           [publicationCartInfo]="publication"
           [routerLink]="['/publications', publication.id]"
-          [state]="{publication: publication}"></publication-card-component>
+          [state]="{publication: publication}">
+        </publication-card-component>
       </div>
     }
   }
