--- a/src/styles.css
+++ b/src/styles.css
@@ -76,3 +76,12 @@
   font-weight: 900;
   font-style: italic;
 }
+
+/* Hide scrollbar but allow scrolling */
+body {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE 10+ */
+}
+body::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
