--- a/src/app/components/navbar-component/navbar-component.html
+++ b/src/app/components/navbar-component/navbar-component.html
@@ -12,7 +12,7 @@
         </a>
       </div>
 
-      <div class="hidden md:flex md:items-center md:space-x-6">
+      <div class="hidden md:flex md:items-center md:space-x-10 mr-27">
         <a routerLink="/solutions" class="text-lg oswald-regular hover:text-gray-300">Solutions</a>
         <a routerLink="/research" class="text-lg oswald-regular hover:text-gray-300">Research</a>
         <a routerLink="/writeups" class="text-lg oswald-regular hover:text-gray-300">Writeups</a>
