--- a/src/app/components/publication-open/publication-open.html
+++ b/src/app/components/publication-open/publication-open.html
@@ -1,5 +1,5 @@
 <!-- Publication detail (uses your Tailwind + font utility classes) -->
-<div class="max-w-4xl mx-auto px-6 py-12">
+<div class="max-w-5xl mx-auto px-6 py-12">
   <!-- Title -->
     @if (publication.id !== 0) {
 
@@ -9,7 +9,7 @@
     </h1>
 
     <!-- meta row -->
-    <div class="oswald-regular mt-4 flex flex-wrap items-center gap-4 text-sm text-slate-500">
+    <div class="oswald-regular mt-4 flex flex-wrap items-center text-sm text-slate-500">
       <div>
         Published in
         <span class=" text-black font-medium hover:text-red-700">
@@ -18,7 +18,7 @@
         <span class="font-medium text-slate-600">{{ publication?.date }}</span>
       </div>
 
-      <div class="oswald-regular flex items-center gap-2">
+      <div class="oswald-regular">
         <span class="inline-block px-2 py-0.5 rounded-md bg-slate-100 text-slate-600 text-xs">
           #{{ publication?.id }}
         </span>
@@ -55,7 +55,7 @@
       <iframe
         title="publication"
         [src]="safeUrl"
-        class="w-full h-[63vh] rounded-lg"
+        class="w-full h-[57vh] rounded-lg"
       ></iframe>
     }
 
