--- a/src/app/components/user-component/user-component.html
+++ b/src/app/components/user-component/user-component.html
@@ -19,7 +19,7 @@
 
       <!-- name and occupation -->
       <div class="text-center">
-        <div class="archivo-black-regular text-3xl text-slate-900 leading-none">
+        <div class="archivo-black-regular text-2xl text-slate-900 leading-none">
           {{ userInfo?.name ?? 'Unnamed' }}
         </div>
         <div class="oswald-regular text-lg text-slate-500 mt-2">
@@ -28,7 +28,7 @@
       </div>
 
       <!-- details -->
-      <ul class="w-full mt-5 space-y-3 text-lg">
+      <ul class="w-full space-y-3 text-lg">
         @if (userInfo?.location) {
           <li class="flex items-center gap-4 text-slate-600">
             <svg class="w-6 h-6 flex-shrink-0" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
