--- a/src/app/data/publication1/1.html
+++ b/src/app/data/publication1/1.html
@@ -3,10 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <title>Hello World</title>
-  <link rel="stylesheet" href="../styles.css">
+  <link rel="stylesheet" href="../../../styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+  <style>
+    /* to hide that bar i think it doesnt look that good */
+    html, body {
+      scrollbar-width: none;
+      -ms-overflow-style: none;
+    }
+    html::-webkit-scrollbar, body::-webkit-scrollbar {
+      display: none;
+    }
+  </style>
 </head>
 
 <!-- This is where you can start adding your own content. The code above this line is just boilerplate HTML that is required for the app to work. -->
